fixed an issue with styles not rendering properly on mobile

--- a/static/styles/css/main.css
+++ b/static/styles/css/main.css
@@ -53,8 +53,8 @@
   background-color: blue;
   border-radius: 0;
   margin: 4px;
-  box-shadow: 1px 2px hotpink;
-  transform: rotate(-2deg);
+  box-shadow: -1px 0px hotpink;
+  transform: rotate(-1deg);
   color: white;
 }
 #nav .nav-button-1 a {
@@ -62,8 +62,8 @@
 }
 #nav .nav-button-1:hover {
   box-shadow: none;
-  left: 1px;
-  top: 2px;
+  left: -1px;
+  top: 0px;
 }
 #nav .nav-button-2 {
   position: relative;
@@ -71,8 +71,8 @@
   background-color: blue;
   border-radius: 0;
   margin: 4px;
-  box-shadow: -1px -1px hotpink;
-  transform: rotate(-2deg);
+  box-shadow: 1px 1px hotpink;
+  transform: rotate(-1deg);
   color: white;
 }
 #nav .nav-button-2 a {
@@ -80,8 +80,8 @@
 }
 #nav .nav-button-2:hover {
   box-shadow: none;
-  left: -1px;
-  top: -1px;
+  left: 1px;
+  top: 1px;
 }
 #nav .nav-button-3 {
   position: relative;
@@ -89,8 +89,8 @@
   background-color: blue;
   border-radius: 0;
   margin: 4px;
-  box-shadow: 2px -2px hotpink;
-  transform: rotate(-1deg);
+  box-shadow: 4px 3px hotpink;
+  transform: rotate(1deg);
   color: white;
 }
 #nav .nav-button-3 a {
@@ -98,8 +98,8 @@
 }
 #nav .nav-button-3:hover {
   box-shadow: none;
-  left: 2px;
-  top: -2px;
+  left: 4px;
+  top: 3px;
 }
 #nav .nav-button-4 {
   position: relative;
@@ -107,8 +107,8 @@
   background-color: blue;
   border-radius: 0;
   margin: 4px;
-  box-shadow: 3px 4px hotpink;
-  transform: rotate(3deg);
+  box-shadow: -2px 3px hotpink;
+  transform: rotate(1deg);
   color: white;
 }
 #nav .nav-button-4 a {
@@ -116,8 +116,8 @@
 }
 #nav .nav-button-4:hover {
   box-shadow: none;
-  left: 3px;
-  top: 4px;
+  left: -2px;
+  top: 3px;
 }
 #nav .nav-button-5 {
   position: relative;
@@ -125,8 +125,8 @@
   background-color: blue;
   border-radius: 0;
   margin: 4px;
-  box-shadow: -1px -2px hotpink;
-  transform: rotate(0deg);
+  box-shadow: 4px -4px hotpink;
+  transform: rotate(2deg);
   color: white;
 }
 #nav .nav-button-5 a {
@@ -134,8 +134,8 @@
 }
 #nav .nav-button-5:hover {
   box-shadow: none;
-  left: -1px;
-  top: -2px;
+  left: 4px;
+  top: -4px;
 }
 #nav .btn-active {
   position: relative;
@@ -170,7 +170,7 @@
   background: hotpink;
   color: white;
   padding: 0px 20px;
-  transform: rotate(0deg);
+  transform: rotate(-1deg);
   transition: all 0.5s;
   z-index: 101;
 }
@@ -184,12 +184,12 @@
 .card:hover .title {
   position: relative;
   background: hotpink;
-  transform: rotate(0deg) scale(1.4);
+  transform: rotate(2deg) scale(1.4);
   z-index: 101;
 }
 .card:hover .like-view {
   background: blue;
-  transform: rotate(-2deg);
+  transform: rotate(1deg);
   z-index: 110;
 }
 .card .spirit {
@@ -247,7 +247,6 @@
 .card-header {
   box-shadow: 4px 4px black;
   color: white !important;
-  transform: scale(1.3);
   padding: 0px 10px;
 }
 .card-header .pink-head {
