--- a/static/styles/scss/components/infocard.scss
+++ b/static/styles/scss/components/infocard.scss
@@ -47,9 +47,7 @@
 .card-header{
     box-shadow: 4px 4px black;
     color: white !important;
-    transform: scale(1.3);
     padding: 0px 10px;
-        
     .pink-head{
         background-color: hotpink;
     }
